--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.0",
     "http-status-codes": "^2.2.0",
+    "method-override": "^3.0.0",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3"
   },
